--- a/src/app/components/authentication/register/register.component.html
+++ b/src/app/components/authentication/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="auth-wrapper v3">
     <div class="auth-form">
       <div class="auth-header">
-        AI-Magic Power
+        MYC
       </div>
       <div class="card my-5">
         <div class="card-body">
