--- a/src/app/theme/layouts/admin-layout/navigation/navigation.component.html
+++ b/src/app/theme/layouts/admin-layout/navigation/navigation.component.html
@@ -4,7 +4,7 @@
       <a href="javascript:" class="b-brand">
         <!-- <img src="assets/images/logo-dark.svg" alt="theme-logo" class="logo logo-dark logo-lg" /> -->
          
-         <h3>AI-Magic-Power</h3>
+         <h3>MYC</h3>
       </a>
     </div>
     <app-nav-content (NavCollapsedMob)="navCollapseMob()" class="scroll-div w-100 compact"></app-nav-content>
