--- a/src/app/profile/today-joining/today-joining.component.html
+++ b/src/app/profile/today-joining/today-joining.component.html
@@ -1,5 +1,5 @@
 <div class="container card">
-  <h5 class="my-3">{{ this.cookies.isAdmin() ? 'Today AI Trade' : 'AI Income' }} Report</h5>
+  <h5 class="my-3">Today Joining</h5>
 
   <!-- Loading Spinner -->
   <div *ngIf="loading" class="text-center">
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <!-- Table/Card Layout -->
+  <!-- Joining Table -->
   <div *ngIf="!loading" class="card">
     <table class="table table-hover">
       <thead>
@@ -16,7 +16,8 @@
           <th>DATE</th>
           <th>USER ID</th>
           <th>NAME</th>
-          <th>AMOUNT</th>
+          <th>EMAIL</th>
+          <th>MOBILE NO</th>
           <th>STATUS</th>
         </tr>
       </thead>
@@ -24,14 +25,15 @@
         <tr *ngFor="let payment of filteredTrans | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
           <td data-label="DATE">{{ payment?.createdAt | date: 'short' }}</td>
           <td data-label="USER ID">{{ payment?.userId }}</td>
-          <td data-label="USER NAME" class="text-capitalize">{{ payment?.userName }}</td>
-          <td data-label="AI EARNING" class="text-capitalize">${{ payment?.aiEarning || 0 }}</td>
+          <td data-label="NAME" class="text-capitalize">{{ payment?.name }}</td>
+          <td data-label="EMAIL" class="text-capitalize">{{ payment?.email }}</td>
+          <td data-label="MOBILE NO" class="text-capitalize">{{ payment?.mobile }}</td>
           <td data-label="STATUS" class="text-capitalize">{{ payment?.status }}</td>
         </tr>
       </tbody>
     </table>
-  </div>
 
-  <!-- Pagination Controls -->
-  <pagination-controls (pageChange)="page = $event" class="d-flex justify-content-end"></pagination-controls>
+    <!-- Pagination Controls -->
+    <pagination-controls (pageChange)="page = $event" class="d-flex justify-content-end"></pagination-controls>
+  </div>
 </div>
