--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="auth-form">
       <div class="auth-header">
         <!-- <a href="javascript:"><img src="assets/images/logo-dark.svg" alt="logo img" /></a> -->
-        AI-Magic Power
+        MYC
       </div>
       <div class="card my-5">
         <div class="card-body">
