--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group mb-3">
               <label class="form-label" for="referralCode">Referral Code</label>
-              <input type="text" class="form-control" formControlName="referralCode" placeholder="Referral Code" readonly />
+              <input type="text" class="form-control" formControlName="referralCode" placeholder="Referral Code" />
             </div>
 
             <p class="mt-4 text-sm text-muted">
