--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -88,7 +88,7 @@
       </div>
       <div class="modal-body">
         <div>
-          <p class="modal-title" id="packageModalLabel">Thank you for selecting AI Magic Power Family !!!</p>
+          <p class="modal-title" id="packageModalLabel">Thank you for selecting MYC Power Family !!!</p>
           <p>Please rember you MenmerId {{userInfo?.userId}}</p>
         </div>
       </div>
