--- a/src/app/pdf/pdf.component.html
+++ b/src/app/pdf/pdf.component.html
@@ -1,5 +1,5 @@
 <div class="card p-4">
-    <h2 class="text-primary">AI MAGIC POWER</h2>
+    <h2 class="text-primary">MYC POWER</h2>
     <p>At Al Magic Power, we harness the limitless potential of Artificial Intelligence to revolutionize the way
         businesses operate and people live. Our mission is to unlock the magic of Al, making it accessible, affordable,
         and actionable for all...</p>
