--- a/src/scss/themes/layouts/menu/sidebar.scss
+++ b/src/scss/themes/layouts/menu/sidebar.scss
@@ -118,7 +118,7 @@
 
           > a {
             &:after {
-              content: '\e844';
+              content: '\25BC';
               font-family: 'feather';
               font-size: 15px;
               border: none;
