--- a/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
@@ -1,12 +1,14 @@
 <!-- Vertical layout -->
-<!-- <ng-scrollbar style="height: calc(100vh - 60px)" visibility="hover" id="nav-ps-mantis"> -->
+<ng-scrollbar style="height: calc(100vh - 60px)" visibility="hover" id="nav-ps-mantis">
   <div class="navbar-content">
-    <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()">
+    <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()" (mouseleave)="navMob()">
       @for (item of navigations; track item) {
         @if (item.type === 'group') {
           <app-nav-group [item]="item"></app-nav-group>
+        }@else if (item.type === 'collapse') {
+          <app-nav-collapse [item]="item"></app-nav-collapse>
         }
       }
     </ul>
   </div>
-<!-- </ng-scrollbar> -->
+</ng-scrollbar>
