--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -13,13 +13,13 @@
           </div>
           <form [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="form-group mb-3">
-              <label class="form-label" for="userId">MEMBER ID</label>
+              <label class="form-label" for="email">EMAIL</label>
               <input
                 type="text"
                 class="form-control"
-                id="userId"
-                formControlName="userId"
-                placeholder="MEMBER ID"
+                id="email"
+                formControlName="email"
+                placeholder="abc@gmail.com"
               />
             </div>
             <div class="form-group mb-3">
