--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -89,7 +89,7 @@
       <div class="modal-body">
         <div>
           <p class="modal-title" id="packageModalLabel">Thank you for selecting MYC Power Family !!!</p>
-          <p>Please rember you MenmerId {{userInfo?.userId}}</p>
+          <!-- <p>Please rember you MenmerId {{userInfo?.userId}}</p> -->
         </div>
       </div>
       <div class="modal-footer">
